potential fix for mobile overflow

--- a/css/_sass/base.scss
+++ b/css/_sass/base.scss
@@ -160,6 +160,8 @@ body {
 .bg-wrap {
   background: $primaryBg;
   background-image: linear-gradient(-127deg, $primaryBgLeft 3%, $primaryBgRight 88%);
+  width: 100%;
+  overflow: hidden;
 }
 
 
